# ia256-utilities

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  Taskfile.yml
include/ia256-utilities/: dirs.hpp  system.hpp
src/: dirs.cpp  system.cpp
tests/: tests.cpp
